# django-spaces-settings

./: setup.cfg
spaces_settings/: apps.py  urls.py  views.py
spaces_settings/templates/spaces_settings/: settings.html  space_confirm_delete.html
